--- a/conf/nginx.conf
+++ b/conf/nginx.conf
@@ -1,1 +1,36 @@
-/usr/local/etc/nginx/servers/hunter_yaf.conf
+server {
+    listen       8022;
+    server_name  hunter-yaf.com 127.0.0.1;
+
+    access_log  /var/log/nginx/hunter_yaf-access.log  main;
+    error_log  /var/log/nginx/hunter_yaf-error.log debug;
+
+
+    root /var/webdev/hunter_yaf/www;
+    index index.php;
+
+    location / {
+        index  index.php;
+#autoindex on;
+    }
+
+#error_page  404              /404.html;
+
+
+    location ~ \.php$ {
+#fastcgi_pass unix:/var/run/php-fpm.sock;
+        fastcgi_pass   127.0.0.1:9000;
+        fastcgi_index  index.php;
+#        fastcgi_split_path_info ^((?U).+\.php)(/?.+)$;
+#        fastcgi_param  PATH_INFO $fastcgi_script_name;
+        fastcgi_param  SCRIPT_FILENAME  $document_root$fastcgi_script_name;
+        include        fastcgi_params;
+    }
+
+# deny access to .htaccess files, if Apache's document root
+# concurs with nginx's one
+#
+#    location ~ /\.ht {
+#        deny  all;
+#    }
+}
